--- a/quote-calculator/guttering.html
+++ b/quote-calculator/guttering.html
@@ -146,26 +146,26 @@ input:invalid { border-color:red; background:#ffe6e6; }
 <script>
 // DATES
 const dates = [
-{ date: "Thursday 29th Jan", status: "booked" },
-{ date: "Friday 30th Jan", status: "booked" },
-{ date: "Saturday 31st Jan", status: "booked" },
-{ date: "Sunday 1st Feb", status: "booked" },
-{ date: "Monday 2nd Feb", status: "booked" },
-{ date: "Tuesday 3rd Feb", status: "booked" },
-{ date: "Wednesday 4th Feb", status: "booked" },
-{ date: "Thursday 5th Feb", status: "available" },
-{ date: "Friday 5th Feb", status: "available" },
-{ date: "Saturday 7th Feb", status: "booked" },
-{ date: "Sunday 8th Feb", status: "booked" },
-{ date: "Monday 9th Feb", status: "available" },
-{ date: "Tuesday 10th Feb", status: "available" },
-{ date: "Wednesday 11th Feb", status: "booked" },
-{ date: "Thursday 12th Feb", status: "available" },
-{ date: "Friday 13th Feb", status: "booked" },
-{ date: "Saturday 14th Feb", status: "available" },
-{ date: "Sunday 15th Feb", status: "booked" },
-{ date: "Monday 16th Feb", status: "available" },
-{ date: "Tuesday 17th Feb", status: "available" }
+{ date: "Wednesday 11th Jan", status: "booked" },
+{ date: "Thursday 12th Jan", status: "booked" },
+{ date: "Friday 13th Jan", status: "booked" },
+{ date: "Saturday 14th Feb", status: "booked" },
+{ date: "Sunday 15th Feb", status: "available" },
+{ date: "Monday 16th Feb", status: "booked" },
+{ date: "Tuesday 17th Feb", status: "booked" },
+{ date: "Wednesday 18th Feb", status: "booked" },
+{ date: "Thursday 19th Feb", status: "available" },
+{ date: "Friday 20th Feb", status: "booked" },
+{ date: "Saturday 21st Feb", status: "booked" },
+{ date: "Sunday 22nd Feb", status: "available" },
+{ date: "Monday 23rd Feb", status: "available" },
+{ date: "Tuesday 24th Feb", status: "booked" },
+{ date: "Wednesday 25th Feb", status: "available" },
+{ date: "Thursday 26th Feb", status: "booked" },
+{ date: "Friday 27th Feb", status: "available" },
+{ date: "Saturday 28th Feb", status: "booked" },
+{ date: "Sunday 1st Mar", status: "available" },
+{ date: "Monday 2nd Mar", status: "available" }
 ];
 
 const datesGridEl = document.getElementById("datesGrid");
